Fix alignment bug

--- a/src/main/webapp/app/app.component.scss
+++ b/src/main/webapp/app/app.component.scss
@@ -54,7 +54,7 @@
       align-items: center;
 
       button {
-        margin: 0 0 16px;
+        margin: 0 0 12px;
         padding: 0;
         color: #dc0000;   
       }
